fixed header, z-index, change heading, new anchor tag to ribbon

--- a/restyles.css
+++ b/restyles.css
@@ -26,10 +26,12 @@ section {
 }
 
 header {
-  position: sticky;
+  position: fixed;
+  width: 100%;
   top: 0;
   background: rgb(53, 63, 90);
   height: 75px;
+  z-index: 100;
 }
 
 footer {
